2016-12-29  Gabriel Dos Reis  <gdr@axiomatics.org>

	* lisp/core.lisp.in ($NativeModulePrefix): Define and export.
	* boot/ast.boot (%Ast): Ad %LoadUnit alternative.
	(genImportDeclaration): Take a third parameter.  Update caller.
	* boot/parser.boot (bpProvenance): New.
	(bpImport): Use it to parse load unit specification.
	* boot/translator.boot ($foreignLoadUnits): New.
	(translateToplevel): Update.
	(loadNativeModule): Tidy.
	(loadSystemRuntimeCore): Likewise.
	* lib/Makefile.in: Tidy reference to shared library pathname.
	* lisp/Makefile.in (edit): Translate oa_shrlib_prefix.

2016-12-26  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/i-output.boot (appChar): Don't modify string parameter.
	* algebra/Makefile.am (strap-1/FINITE.$(FASLEXT)): Update dependency.

2016-01-31  Gabriel Dos Reis  <gdr@axiomatics.org>

	Breaking change from previous version: No more support for command
	line --show-insn option, and library compiler ")set )report" option.
	* interp/g-opt.boot (optimizeFunctionDef): Remove reference to
	$reportOptimization. 
	* interp/g-timer.boot (timedOptimization): Likewise.
	* interp/i-syscmd.boot (compileSpad2Cmd): Likewise.
	($setOptions): Remove support for ")report".
	* interp/sys-driver.boot (initializeGlobalState): Likewise.

2016-01-17  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/daase.lisp (GETDATABASE): Remove PARENTS case.
	* interp/database.boot (getConstructorParentsFromDB): Take data
	from compiled code.

2016-01-16  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/sys-driver.boot (initializeDatabase): Be frugal when
	building the algebra.
	* interp/i-funsel.boot (isOpInDomain): Tidy.
	(findUniqueOpInDomain): Likewise.
	(hasSig): Likewise.
	* interp/i-special.boot (constantInDomain?): Likewise.
	* interp/lisplib.boot (isFunctor): Likewise.
	* interp/spad-parser.boot (storeBlanks!): Define.
	* interp/database.boot (getConstructorModemap): Take directly from
	generated code.
	(getConstructorOperationsFromDB): Likewise.